<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/frameSummaryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogMargin"
        android:gravity="center_horizontal"
        android:text="@string/frameSummary"
        android:textAppearance="@style/dialogHeaderFont" />

    <TextView
        android:id="@+id/frameWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialogMargin"
        android:layout_marginTop="@dimen/dialogMargin"
        android:gravity="center_horizontal"
        android:text="@string/frameWinner"
        android:textAppearance="@style/dialogBodyFont"/>

    <TextView
        android:id="@+id/frameScoreSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialogMargin"
        android:gravity="center_horizontal"
        android:text="@string/frameScoreSummary"
        android:textAppearance="@style/dialogBodyFont"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/dialogLineMarginH"
        android:layout_marginVertical="@dimen/dialogTextMargin"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/nextBreakerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialogMargin"
        android:gravity="center_horizontal"
        android:text="@string/nextBreaker"
        android:textAppearance="@style/dialogBodyFont"/>

</LinearLayout>