<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.snookerscoreboard.MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/background_slate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title1"
                android:textSize="32sp"
                android:textAppearance="@style/titleFont"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title2"
                android:textAppearance="@style/titleFont"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/playerA"
                android:textAppearance="@style/playerFont"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/playerB"
                android:textAppearance="@style/playerFont"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/scoreA"
                    android:textAppearance="@style/scoreFont"/>

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/scoreB"
                    android:textAppearance="@style/scoreFont"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/frameScoreA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/frameScoreA"
                    android:textAppearance="@style/scoreFrameFont"/>

                <View
                    android:layout_width="32dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineColor"/>

                <TextView
                    android:id="@+id/frameScoreB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/frameScoreB"
                    android:textAppearance="@style/scoreFrameFont"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/redA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/redball"
                        android:onClick="redA"/>

                    <ImageButton
                        android:id="@+id/greenA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/greenball"
                        android:onClick="greenA"/>

                    <ImageButton
                        android:id="@+id/blueA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blueball"
                        android:onClick="blueA"/>

                    <ImageButton
                        android:id="@+id/blackA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blackball"
                        android:onClick="blackA"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/yellowA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/yellowball"
                        android:onClick="yellowA"/>

                    <ImageButton
                        android:id="@+id/brownA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/brownball"
                        android:onClick="brownA"/>

                    <ImageButton
                        android:id="@+id/pinkA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pinkball"
                        android:onClick="pinkA"/>

                    <ImageButton
                        android:id="@+id/undoA"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/undo"
                        android:onClick="undoA"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/redB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/redball"
                        android:onClick="redB"/>

                    <ImageButton
                        android:id="@+id/greenB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/greenball"
                        android:onClick="greenB"/>

                    <ImageButton
                        android:id="@+id/blueB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blueball"
                        android:onClick="blueB"/>

                    <ImageButton
                        android:id="@+id/blackB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blackball"
                        android:onClick="blackB"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/yellowB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/yellowball"
                        android:onClick="yellowB"/>

                    <ImageButton
                        android:id="@+id/brownB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/brownball"
                        android:onClick="brownB"/>

                    <ImageButton
                        android:id="@+id/pinkB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pinkball"
                        android:onClick="pinkB"/>

                    <ImageButton
                        android:id="@+id/undoB"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/ballButtonMargin"
                        android:padding="@dimen/ballButtonPadding"
                        android:background="@color/ballBackground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/undo"
                        android:onClick="undoB"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/timerMargin"
                android:textAppearance="@style/scoreFont" />

            <TextView
                android:id="@+id/pointsDifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/timer"
                android:layout_margin="@dimen/pointsDiffMargin"
                android:text="@string/pntsDiff"
                android:textAppearance="@style/pointsDiffFont"/>

            <TextView
                android:id="@+id/pointsAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/pointsDifference"
                android:layout_margin="@dimen/pointsDiffMargin"
                android:text="@string/pntsAvl"
                android:textAppearance="@style/pointsDiffFont" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/timerButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/controlButtonMargin"
            android:layout_marginBottom="@dimen/controlButtonMargin"
            android:orientation="vertical">

            <Button
                android:id="@+id/startFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startFrame" />

            <Button
                android:id="@+id/endFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endFrame"
                android:onClick="endFrame"/>

            <Button
                android:id="@+id/endMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resetAll"
                android:onClick="resetAll"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
